--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,42 +1,143 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  padding: 0;
+  height: 100%;
+}
+/* TO-DO */
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 180px;
+    background-color: #2c3e4e;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header h1 {
+    font-size: 50px;
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: #32485e;
+    height: 90px;
+    gap: 20px;
 }
 
-.card {
-  padding: 2em;
+#searchmovie {
+    border-radius: 7px;
+    width: 190px;
+    font-size: 16px;
+    height: 35px;
+    border-style: none;
+    padding-left: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+#filter {
+    border-radius: 7px;
+    width: 190px;
+    font-size: 16px;
+    height: 35px;
+    border-style: none;
+    padding-left: 10px;
+}
+
+#json-output {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: #f4f4f4;
+    padding-top: 25px;
+    padding-bottom: 20px;
+    gap: 20px;
+}
+
+.movie-card {
+    display:flex;
+    flex-direction: column;
+    border-style: solid;
+    width: 270px;
+    align-items: center;
+    text-align: center;
+    padding: 15px;
+    border: 0.5px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.movie-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    aspect-ratio: 2 / 3;
+}
+
+.movie-card h3 {
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+
+.movie-card p {
+    margin-top: 5px;
+}
+
+.pagenav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    font-size: 15px;
+    background-color: #f4f4f4;
+}
+
+#nextPageBtn {
+    width: 60px;
+    height: 40px;
+    align-items: center;
+    background-color: #3296d9;
+    color: white;
+    border-style: none;
+    font-size: 15px;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+#nextPageBtn:hover {
+    background-color: #256fa1;
+    cursor: pointer;
+}
+
+#prevPageBtn {
+    padding: 5px;
+    width: auto;
+    height: 40px;
+    background-color: #3296d9;
+    align-items: center;
+    color: white;
+    border-style: none;
+    font-size: 15px;
+    border-radius: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#prevPageBtn:hover {
+    background-color: #256fa1;
+    cursor: pointer;
+}
+
+#pageInfo {
+    font-size: 20px;
 }
